--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ php:
     - 5.6
     - 7.0
     - 7.1
-    - 7.2
+    - nightly
 
 matrix:
     allow_failures:
-        - php: 7.2
+        - php: nightly
 
 before_script:
     - travis_retry composer self-update
