--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "squizlabs/php_codesniffer": "^3.0",
-        "overtrue/phplint": "^0.2.4"
+        "overtrue/phplint": "^0.2.4",
+        "nyholm/nsa": "^1.1"
     },
     "autoload": {
         "psr-4": {
