--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "tuupola/branca",
-    "description": "Authenticated Encrypted API Tokens for PHP (IETF ChaCha20-Poly1305)",
+    "description": "Authenticated Encrypted API Tokens (IETF ChaCha20-Poly1305)",
     "keywords": [
         "jwt",
         "fernet",
