Use IETF XChaCha20-Poly1305 AEAD instead
See https://twitter.com/CiPHPerCoder/status/889145777687232514

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "tuupola/branca",
-    "description": "Authenticated Encrypted API Tokens with Associated Data",
+    "description": "Authenticated Encrypted API Tokens (IETF XChaCha20-Poly1305 AEAD)",
     "keywords": [
         "jwt",
         "fernet",
