--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "tuupola/branca",
-    "description": "Authenticated Encrypted API Tokens (IETF XChaCha20-Poly1305 AEAD)",
+    "description": "Secure alternative to JWT. Authenticated Encrypted API Tokens. ",
     "keywords": [
         "jwt",
         "fernet",
