--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         {
             "name": "Mika Tuupola",
             "email": "tuupola@appelsiini.net",
-            "homepage": "http://www.appelsiini.net/",
+            "homepage": "https://appelsiini.net/",
             "role": "Developer"
         }
     ],
