--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ include:
 
 before_script:
     - travis_retry composer self-update
+    - if [[ $TRAVIS_PHP_VERSION == "5.6" ]]; then composer remove --dev phpstan/phpstan; fi
     - travis_retry composer install --no-interaction
     - if [ "$DEPENDENCIES" = "lowest" ]; then travis_retry composer update --prefer-lowest --prefer-stable --no-interaction; fi;
 script:
