--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "paragonie/sodium_compat": "^1.1",
-        "tuupola/base62": "^0.8.0 || ^0.9.0"
+        "tuupola/base62": "^0.8.0 || ^0.9.0 || ^0.10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
