--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "tuupola/base62": "^0.8.0 || ^0.9.0 || ^0.10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^5.7 || ^6.5",
         "squizlabs/php_codesniffer": "^3.0",
         "overtrue/phplint": "^1.0",
         "nyholm/nsa": "^1.1",
