--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,12 @@ before_script:
     - if [[ $TRAVIS_PHP_VERSION == "5.6" ]]; then composer remove --dev phpstan/phpstan; fi
     - travis_retry composer install --no-interaction
     - if [ "$DEPENDENCIES" = "lowest" ]; then travis_retry composer update --prefer-lowest --prefer-stable --no-interaction; fi;
+
 script:
     - make travis
 
 after_success:
-    - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then bash <(curl -s https://codecov.io/bash); fi
+    - bash <(curl -s https://codecov.io/bash)
 
 cache:
     directories:
