--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^7.2",
         "tuupola/base62": "^0.8.0|^0.9.0|^0.10.0|^0.11.0|^1.0"
     },
     "require-dev": {
