--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "tuupola/base62": "^0.8.0|^0.9.0|^0.10.0|^0.11.0|^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^6.0",
+        "phpunit/phpunit": "^5.0|^6.0|^7.0",
         "squizlabs/php_codesniffer": "^3.0",
         "overtrue/phplint": "^1.0",
         "nyholm/nsa": "^1.1",
