--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,12 @@ matrix:
     allow_failures:
         - php: nightly
 
-include:
-    - php: 7.0
-        env: DEPENDENCIES=lowest
+matrix:
+    allow_failures:
+        - php: nightly
+    include:
+        - php: 7.0
+          env: DEPENDENCIES=lowest
 
 before_script:
     - travis_retry composer self-update
