--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0|^8.0|^9.0",
-        "squizlabs/php_codesniffer": "^2.0|^3.0",
+        "squizlabs/php_codesniffer": "^3.5",
         "overtrue/phplint": "^1.0",
         "phpstan/phpstan": "^0.12.42"
     },
