--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "tuupola/base62": "^1.0|^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0|^6.0|^7.0",
-        "squizlabs/php_codesniffer": "^2.0|^3.0",
+        "phpunit/phpunit": "^7.0|^8.0|^9.0",
+        "squizlabs/php_codesniffer": "^3.5",
         "overtrue/phplint": "^1.0",
-        "phpstan/phpstan": "^0.11.1"
+        "phpstan/phpstan": "^0.12.42"
     },
     "autoload": {
         "psr-4": {
