--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "phpunit/phpunit": "^7.0|^8.0|^9.0",
         "squizlabs/php_codesniffer": "^3.5",
         "overtrue/phplint": "^1.0",
-        "phpstan/phpstan": "^0.12.42"
+        "phpstan/phpstan": "^0.12.42",
+        "nyholm/nsa": "^1.2"
     },
     "autoload": {
         "psr-4": {
