--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,7 @@ jobs:
         run: make lint
       - name: Run unit tests
         run: make unit
-      - name: Run static analysis
-        run: make static
+      # - name: Run static analysis
+      #   run: make static
       - name: Upload coverage
         uses: codecov/codecov-action@v1
